devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /elearning
spec:
  ingressClassName: nginx
  rules:
  - host: local.astriauniversity.com
    http:
      paths:
      - path: /author
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
